@@ -4,7 +4,8 @@ CHANGES
 3.12.2 (unreleased)
 -------------------
 
-- ...
+- Fixed bug where xml-rpc requests would hang when served using
+  paster.httpserver.
 
 3.12.1 (2010-02-21)
 -------------------
